@@ -1,6 +1,19 @@
 import os
 import inspect
 
+import mimetypes
+
+try:
+    # See http://bugs.python.org/issue5853 which is a recursion bug
+    # that seems to effect Python 2.6, Python 2.6.1, and 2.6.2 (a fix
+    # has been applied on the Python 2 trunk).  This workaround should
+    # really be in Paste if anywhere, but it's easiest to just do it
+    # here and get it over with to avoid needing to deal with any
+    # fallout.
+    mimetypes.init()
+except AttributeError:
+    pass
+
 from paste.urlparser import StaticURLParser
 
 from zope.component import queryMultiAdapter
@@ -18,6 +31,7 @@ deprecated('view_execution_permitted',
     "deprecated; instead use 'from repoze.bfg.security import "
     "view_execution_permitted')",
     )
+
 
 _marker = object()
 
